# family-finance-app

./: README.md  categories.py  main.py  people.py  pyproject.toml  statements.py
finance_app/: csv_adapter.py  models.py  store.py
templates/: index.html
templates/categories/: form.html  list.html
templates/people/: form.html  list.html
templates/statements/: categorise.html  create.html  import.html  import_categorise.html  import_review.html  list.html
