[project]
name = "famfin-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "grm-rs",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[tool.uv.sources]
grm-rs = { path = "../grm-rs/dist/grm_rs-0.1.0a7-cp39-abi3-manylinux_2_34_x86_64.whl" }
